Work on bouying animation for ships

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <body>
     <script src="./js/babylon.js" charset="utf-8"></script>
     <canvas id="render-canvas"></canvas>
-    <script src="./bundle.js" charset="utf-8"></script>
+    <script src="./js/babylon.js" charset="utf-8"></script>
+    <script src="./js/babylon.waterMaterial.js" charset="utf-8"></script>
+    <script src="./js/opponent_board.js" charset="utf-8"></script>
+    <script src="./js/player_board.js" charset="utf-8"></script>
+    <script src="./js/ship.js" charset="utf-8"></script>
+    <script src="./js/battleship.js" charset="utf-8"></script>
   </body>
 </html>
