Break up scene logic into files

--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <script src="./js/babylon.js" charset="utf-8"></script>
     <canvas id="render-canvas"></canvas>
     <script src="./js/babylon.js" charset="utf-8"></script>
+    <script src="./js/skybox.js" charset="utf-8"></script>
+    <script src="./js/ships.js" charset="utf-8"></script>
     <script src="./js/babylon.waterMaterial.js" charset="utf-8"></script>
+    <script src="./js/water.js" charset="utf-8"></script>
+    <script src="./js/light.js" charset="utf-8"></script>
+    <script src="./js/emitter.js" charset="utf-8"></script>
+    <script src="./js/projectile.js" charset="utf-8"></script>
     <script src="./js/opponent_board.js" charset="utf-8"></script>
     <script src="./js/player_board.js" charset="utf-8"></script>
     <script src="./js/ship.js" charset="utf-8"></script>
+    <script src="./js/camera.js" charset="utf-8"></script>
+    <script src="./js/events.js" charset="utf-8"></script>
+    <script src="./js/animations.js" charset="utf-8"></script>
+    <script src="./js/scene_config.js" charset="utf-8"></script>
     <script src="./js/battleship.js" charset="utf-8"></script>
   </body>
 </html>
