Create turns between AI and human player

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   </head>
   <body>
     <script src="./js/babylon.js" charset="utf-8"></script>
+    <ul>
+      <li>Click and drag ships to configure board</li>
+      <li>"SPACE": rotate ship</li>
+      <li>"ENTER": confirm board</li>
+      <li>"v": change view</li>
+      <li>Click enemy tiles to attack</li>
+    </ul>
     <canvas id="render-canvas"></canvas>
     <script src="./js/babylon.js" charset="utf-8"></script>
     <script src="./js/skybox.js" charset="utf-8"></script>
@@ -17,10 +24,12 @@
     <script src="./js/projectile.js" charset="utf-8"></script>
     <script src="./js/opponent_board.js" charset="utf-8"></script>
     <script src="./js/player_board.js" charset="utf-8"></script>
+    <script src="./js/turn.js" charset="utf-8"></script>
     <script src="./js/ship.js" charset="utf-8"></script>
+    <script src="./js/game.js" charset="utf-8"></script>
     <script src="./js/camera.js" charset="utf-8"></script>
-    <script src="./js/events.js" charset="utf-8"></script>
     <script src="./js/animations.js" charset="utf-8"></script>
+    <script src="./js/events.js" charset="utf-8"></script>
     <script src="./js/scene_config.js" charset="utf-8"></script>
     <script src="./js/battleship.js" charset="utf-8"></script>
   </body>
