Create OpponentBoard and PlayerBoard classes

--- a/index.html
+++ b/index.html
@@ -6,24 +6,25 @@
   </head>
   <body>
     <script src="./js/babylon.js" charset="utf-8"></script>
-    <ul>
+    <!-- <ul>
       <li>Click and drag ships to configure board</li>
       <li>"SPACE": rotate ship</li>
       <li>"ENTER": confirm board</li>
       <li>"v": change view</li>
       <li>Click enemy tiles to attack</li>
-    </ul>
+    </ul> -->
     <canvas id="render-canvas"></canvas>
     <script src="./js/babylon.js" charset="utf-8"></script>
+    <script src="./js/babylon.waterMaterial.js" charset="utf-8"></script>
+
     <script src="./js/skybox.js" charset="utf-8"></script>
     <script src="./js/ships.js" charset="utf-8"></script>
-    <script src="./js/babylon.waterMaterial.js" charset="utf-8"></script>
     <script src="./js/water.js" charset="utf-8"></script>
     <script src="./js/light.js" charset="utf-8"></script>
     <script src="./js/emitter.js" charset="utf-8"></script>
     <script src="./js/projectile.js" charset="utf-8"></script>
-    <script src="./js/opponent_board.js" charset="utf-8"></script>
-    <script src="./js/player_board.js" charset="utf-8"></script>
+    <script src="./js/opponent_board_class.js" charset="utf-8"></script>
+    <script src="./js/player_board_class.js" charset="utf-8"></script>
     <script src="./js/turn.js" charset="utf-8"></script>
     <script src="./js/ship.js" charset="utf-8"></script>
     <script src="./js/game.js" charset="utf-8"></script>
